<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/driver_register_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/driver"
	tools:context=".driver.DriverRegisterActivity">

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="48dp"
		android:fontFamily="@font/akaya_telivigala"
		android:text="@string/driver_app"
		android:textColor="@android:color/white"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/signUp"
		android:layout_width="170dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="120dp"
		android:backgroundTint="@color/blueButton"
		android:text="@string/sign_up"
		android:textColor="@android:color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/signIn"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/signIn"
		android:layout_width="170dp"
		android:layout_height="wrap_content"
		android:backgroundTint="@android:color/white"
		android:text="@string/sign_in"
		android:textColor="@color/black"
		app:layout_constraintBottom_toBottomOf="@+id/signUp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/signUp"
		app:layout_constraintTop_toTopOf="@+id/signUp"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/customer_app_link"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/looking_for_customer_app"
		app:layout_constraintBottom_toBottomOf="parent"
		android:textColor="@android:color/white"
		android:textSize="14sp"
		android:textStyle="bold"
		android:textAllCaps="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>